RESOLVED FIXED224347
Fix incorrect compile-time macro for CFNETWORK_NSURLSESSION_ATTRIBUTED_BUNDLE_IDENTIFIER
https://bugs.webkit.org/show_bug.cgi?id=224347
Summary Fix incorrect compile-time macro for CFNETWORK_NSURLSESSION_ATTRIBUTED_BUNDLE...
Kate Cheney
Reported 2021-04-08 16:10:39 PDT
Fix incorrect compile-time macro for CFNETWORK_NSURLSESSION_ATTRIBUTED_BUNDLE_IDENTIFIER
Attachments
Patch (3.82 KB, patch)
2021-04-08 16:11 PDT, Kate Cheney
no flags
Kate Cheney
Comment 1 2021-04-08 16:11:33 PDT
Kate Cheney
Comment 2 2021-04-08 16:14:03 PDT
Brent Fulgham
Comment 3 2021-04-08 16:14:30 PDT
Comment on attachment 425556 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=425556&action=review Thank you for fixing this. r=me. > Source/WebCore/PAL/pal/spi/cf/CFNetworkSPI.h:250 > +#if HAVE(CFNETWORK_NSURLSESSION_ATTRIBUTED_BUNDLE_IDENTIFIER) OMG. :-(
EWS
Comment 4 2021-04-08 17:54:08 PDT
Committed r275736 (236323@main): <https://commits.webkit.org/236323@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 425556 [details].
Radar WebKit Bug Importer
Comment 5 2021-04-08 17:55:19 PDT
Note You need to log in before you can comment on or make changes to this bug.