Cherry-pick r275736. rdar://problem/76467285

Fix incorrect compile-time macro for CFNETWORK_NSURLSESSION_ATTRIBUTED_BUNDLE_IDENTIFIER
    https://bugs.webkit.org/show_bug.cgi?id=224347
    <rdar://problem/76353792>

    Reviewed by Brent Fulgham.

    Source/WebCore/PAL:

    * pal/spi/cf/CFNetworkSPI.h:

    Source/WebKit:

    * NetworkProcess/cocoa/NetworkSessionCocoa.mm:
    (WebKit::NetworkSessionCocoa::NetworkSessionCocoa):
    (WebKit::NetworkSessionCocoa::SessionSet::initializeEphemeralStatelessSessionIfNeeded):

    Canonical link: https://commits.webkit.org/236323@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275736 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/236111.11@safari-612.1.10-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.1.10-branch@275776 268f45cc-cd09-0410-ab3c-d52691b4dbfc